[tool.poetry]
name = "datastruct"
version = "0.1.0"
description = ""
authors = ["askip <a.skiper2013@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
unitest = "^1.4.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
